{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 614,
  "lineage": "47c4839a-1e6b-b212-fa71-04e79ed98ac9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elasticip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0915e1cada6d97f2f",
            "domain": "vpc",
            "id": "eipalloc-0915e1cada6d97f2f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-232-20-34.compute-1.amazonaws.com",
            "public_ip": "3.232.20.34",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0005e0cfe09cc9050",
            "arn": "arn:aws:ec2:us-east-1:827950560876:instance/i-0b71844b87bb649b9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b71844b87bb649b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cloud-project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01f35dbc3c85caecf",
            "private_dns": "ip-10-0-3-123.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0fef7be325a1ff19f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b3897d37164e76e4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-034ad1cad49b5aad9",
            "tags": {
              "Name": "Application-server-1"
            },
            "tags_all": {
              "Name": "Application-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b3897d37164e76e4"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_security_group.app-server-sg",
            "aws_subnet.private-app-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app-server-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0005e0cfe09cc9050",
            "arn": "arn:aws:ec2:us-east-1:827950560876:instance/i-0a0909a4df07c3859",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0909a4df07c3859",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cloud-project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07445d4e60ee8696c",
            "private_dns": "ip-10-0-4-77.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0be773ce00a768fea",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b3897d37164e76e4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0512c15a304b8b00d",
            "tags": {
              "Name": "Application-server-2"
            },
            "tags_all": {
              "Name": "Application-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b3897d37164e76e4"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_security_group.app-server-sg",
            "aws_subnet.private-app-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0005e0cfe09cc9050",
            "arn": "arn:aws:ec2:us-east-1:827950560876:instance/i-0c426cccfa3f3dab1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c426cccfa3f3dab1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cloud-project",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": true,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f7556c62a20c7ae0",
            "private_dns": "ip-10-0-0-140.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.140",
            "public_ip": "3.83.179.59",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f33d80ee1bf0df79",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0af8ea164274e3923"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-033cf0605ab6ded3b",
            "tags": {
              "Name": "Bastion-server"
            },
            "tags_all": {
              "Name": "Bastion-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0af8ea164274e3923"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_subnet.public-web-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827950560876:internet-gateway/igw-0fd2280d852335db3",
            "id": "igw-0fd2280d852335db3",
            "owner_id": "827950560876",
            "tags": {
              "Name": "dev-internet-gateway"
            },
            "tags_all": {
              "Name": "dev-internet-gateway"
            },
            "vpc_id": "vpc-0380d32dab055ef89"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0915e1cada6d97f2f",
            "association_id": "eipassoc-08fca0c0513233fd4",
            "connectivity_type": "public",
            "id": "nat-0c7fb34c915ce7687",
            "network_interface_id": "eni-0d21b95139608fcff",
            "private_ip": "10.0.0.223",
            "public_ip": "3.232.20.34",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-033cf0605ab6ded3b"
          },
          "dependencies": [
            "aws_eip.elasticip",
            "aws_subnet.public-web-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT-app-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827950560876:route-table/rtb-05d5ac614c9061172",
            "id": "rtb-05d5ac614c9061172",
            "owner_id": "827950560876",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd2280d852335db3",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c7fb34c915ce7687",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-app-private"
            },
            "tags_all": {
              "Name": "RT-app-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0380d32dab055ef89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elasticip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_subnet.public-web-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT-db-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827950560876:route-table/rtb-0f63707918a92f911",
            "id": "rtb-0f63707918a92f911",
            "owner_id": "827950560876",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd2280d852335db3",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c7fb34c915ce7687",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-db-private"
            },
            "tags_all": {
              "Name": "RT-db-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0380d32dab055ef89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elasticip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_subnet.public-web-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT-web-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827950560876:route-table/rtb-06184ad43cb7ca1d0",
            "id": "rtb-06184ad43cb7ca1d0",
            "owner_id": "827950560876",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd2280d852335db3",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fd2280d852335db3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "RT-web-public"
            },
            "tags_all": {
              "Name": "RT-web-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0380d32dab055ef89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bab628a34d5d57d",
            "route_table_id": "rtb-05d5ac614c9061172",
            "subnet_id": "subnet-034ad1cad49b5aad9"
          },
          "dependencies": [
            "aws_eip.elasticip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.RT-app-private",
            "aws_subnet.private-app-subnet",
            "aws_subnet.public-web-subnet",
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8ac94d30486203e",
            "route_table_id": "rtb-05d5ac614c9061172",
            "subnet_id": "subnet-0512c15a304b8b00d"
          },
          "dependencies": [
            "aws_eip.elasticip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.RT-app-private",
            "aws_subnet.private-app-subnet",
            "aws_subnet.public-web-subnet",
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05697334f06c0caf4",
            "route_table_id": "rtb-05d5ac614c9061172",
            "subnet_id": "subnet-07b6b74cd4441da1c"
          },
          "dependencies": [
            "aws_eip.elasticip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.RT-app-private",
            "aws_subnet.private-app-subnet",
            "aws_subnet.public-web-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06c44f1d563bf9385",
            "route_table_id": "rtb-0f63707918a92f911",
            "subnet_id": "subnet-0a89f983c00aef5af"
          },
          "dependencies": [
            "aws_eip.elasticip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.RT-db-private",
            "aws_subnet.private-db-subnet",
            "aws_subnet.public-web-subnet",
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c2cb2bf14aa3d83c",
            "route_table_id": "rtb-0f63707918a92f911",
            "subnet_id": "subnet-0f618a860d8190993"
          },
          "dependencies": [
            "aws_eip.elasticip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.RT-db-private",
            "aws_subnet.private-db-subnet",
            "aws_subnet.public-web-subnet",
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f414d00fbbbc794",
            "route_table_id": "rtb-0f63707918a92f911",
            "subnet_id": "subnet-058ee59e6654fdf8b"
          },
          "dependencies": [
            "aws_eip.elasticip",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.RT-db-private",
            "aws_subnet.private-db-subnet",
            "aws_subnet.public-web-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f7544a02129c347",
            "route_table_id": "rtb-06184ad43cb7ca1d0",
            "subnet_id": "subnet-033cf0605ab6ded3b"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.RT-web-public",
            "aws_subnet.public-web-subnet",
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042d2f02cee2cc04e",
            "route_table_id": "rtb-06184ad43cb7ca1d0",
            "subnet_id": "subnet-034be0ca7146125bd"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.RT-web-public",
            "aws_subnet.public-web-subnet",
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0986d7c4a62d2ba5e",
            "route_table_id": "rtb-06184ad43cb7ca1d0",
            "subnet_id": "subnet-09df90c06f6b87c4a"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.RT-web-public",
            "aws_subnet.public-web-subnet",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827950560876:security-group/sg-0af8ea164274e3923",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af8ea164274e3923",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "827950560876",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion-allow_web_traffic"
            },
            "tags_all": {
              "Name": "bastion-allow_web_traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0380d32dab055ef89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app-server-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827950560876:security-group/sg-0b3897d37164e76e4",
            "description": "Allow inbound traffic from bastion server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3897d37164e76e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0af8ea164274e3923"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "app-server-sg",
            "name_prefix": "",
            "owner_id": "827950560876",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-server-traffic"
            },
            "tags_all": {
              "Name": "app-server-traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0380d32dab055ef89"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.allow_tls",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827950560876:subnet/subnet-034ad1cad49b5aad9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034ad1cad49b5aad9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "827950560876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-App-Subnet-az1"
            },
            "tags_all": {
              "Name": "private-App-Subnet-az1"
            },
            "vpc_id": "vpc-0380d32dab055ef89"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827950560876:subnet/subnet-0512c15a304b8b00d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0512c15a304b8b00d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "827950560876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-App-Subnet-az2"
            },
            "tags_all": {
              "Name": "private-App-Subnet-az2"
            },
            "vpc_id": "vpc-0380d32dab055ef89"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827950560876:subnet/subnet-07b6b74cd4441da1c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07b6b74cd4441da1c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "827950560876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-App-Subnet-az3"
            },
            "tags_all": {
              "Name": "private-App-Subnet-az3"
            },
            "vpc_id": "vpc-0380d32dab055ef89"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-db-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827950560876:subnet/subnet-0a89f983c00aef5af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a89f983c00aef5af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "827950560876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-Db-Subnet-az1"
            },
            "tags_all": {
              "Name": "private-Db-Subnet-az1"
            },
            "vpc_id": "vpc-0380d32dab055ef89"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827950560876:subnet/subnet-0f618a860d8190993",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f618a860d8190993",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "827950560876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-Db-Subnet-az2"
            },
            "tags_all": {
              "Name": "private-Db-Subnet-az2"
            },
            "vpc_id": "vpc-0380d32dab055ef89"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827950560876:subnet/subnet-058ee59e6654fdf8b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058ee59e6654fdf8b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "827950560876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-Db-Subnet-az3"
            },
            "tags_all": {
              "Name": "private-Db-Subnet-az3"
            },
            "vpc_id": "vpc-0380d32dab055ef89"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-web-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827950560876:subnet/subnet-033cf0605ab6ded3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033cf0605ab6ded3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "827950560876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-Web-Subnet-az1"
            },
            "tags_all": {
              "Name": "public-Web-Subnet-az1"
            },
            "vpc_id": "vpc-0380d32dab055ef89"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827950560876:subnet/subnet-034be0ca7146125bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-034be0ca7146125bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "827950560876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-Web-Subnet-az2"
            },
            "tags_all": {
              "Name": "public-Web-Subnet-az2"
            },
            "vpc_id": "vpc-0380d32dab055ef89"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827950560876:subnet/subnet-09df90c06f6b87c4a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09df90c06f6b87c4a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "827950560876",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-Web-Subnet-az3"
            },
            "tags_all": {
              "Name": "public-Web-Subnet-az3"
            },
            "vpc_id": "vpc-0380d32dab055ef89"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:827950560876:vpc/vpc-0380d32dab055ef89",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00c8ed736068095fc",
            "default_route_table_id": "rtb-00cafebfd253ce7ec",
            "default_security_group_id": "sg-03557bd056889f177",
            "dhcp_options_id": "dopt-0007cd9a708faf954",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0380d32dab055ef89",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00cafebfd253ce7ec",
            "owner_id": "827950560876",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          }
        }
      ]
    }
  ]
}